<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Seminar4">

   <ScrollView
       android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nume_"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/idNume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/hint_nume"
            android:layout_weight="1"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/telefon_"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/editTextPhone2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="phone"
            android:layout_weight="1"
            android:hint="@string/hint_telefon"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_"
            android:textSize="80px"/>

        <DatePicker
            android:id="@+id/calendarView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false"
            android:visibility="visible" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Switch"
            android:layout_marginLeft="150dp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:numStars="5"
            android:layout_marginLeft="90dp"
            android:stepSize="1">

        </RatingBar>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_">

        </Button>

    </LinearLayout>
   </ScrollView>
</LinearLayout>